Rewrite random choice: Marble Bag (#58)
Choices should be random #180669293

Ported from Star Harvester: Way to Centauri